--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -50,6 +50,7 @@
                     <li><span>Web Development</span><br>Building websites</li>
                     <li><span>C language</span><br>Basis of modern programming</li>
                     <li><span>Java</span><br>Designing App interfaces</li>
+                    <li><span>Python</span><br>For AI/ML</li>
                 </ul>
             </div>
 
