--- a/LANDING PAGE/blog.html
+++ b/LANDING PAGE/blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - Gaming Mouse Innovations</title>
+    <title>Blog - EVERY STORY Publishers</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon-32x32.png">
 </head>
